BUG: 124175

Use MD5 Hash as filename to save custom images in global identity.
So no non-ASCII characters will be in filename.


svn path=/branches/kopete/0.12/kopete/; revision=527913